# ai-code-critic

./: .gitignore  README.md  auth.py  auth_fixed.py  pyproject.toml
src/ai_code_critic/: main.py
